--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ python = "^3.7"
 typer = "^0.3.1"
 fastapi = "^0.61.0"
 pytz = "^2020.1"
+streamlink = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
