--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ author_email = "zjoswick@gmail.com"
 formal_name = "Stream Saver"
 description = "A tool to automatically download streams live and avoid muted VODs"
 icon = "src/stream_saver/resources/stream_saver"
-sources = ['src/stream_saver']
-requires = []
+sources = ['src/stream_saver', 'src/binaries']
+requires = ["typer == 0.3.1", "streamlink == 1.5.0"]
 
 
 [tool.briefcase.app.stream_saver.macOS]
@@ -42,8 +42,6 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.7"
 typer = "^0.3.1"
-fastapi = "^0.61.0"
-pytz = "^2020.1"
 streamlink = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
@@ -51,6 +49,7 @@ black = "^19.10b0"
 pytest = "^6.0.1"
 briefcase = "^0.3.3 "
 coverage = "^5.2.1"
+pylint = "^2.5.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
